--- a/VerifyProject/fastlane/App.env
+++ b/VerifyProject/fastlane/App.env
@@ -1,13 +1,11 @@
-
+# 项目相关
 FL_PROJECT_PATH = "./VerifyProject/VerifyProject.xcodeproj"
 FL_WORKSPACE_PATH = "./VerifyProject/VerifyProject.xcworkspace"
 FL_SCHEME = "VerifyProject"
 
-FL_DEVICE_NAME = "iPhone 7"
-
-# output
+# 输出目录
 FL_OUTPUT_ROOT_DIRECTORY = "./fastlane_build"
 
-# Pgyer
+# 蒲公英
 FL_PGYER_USER_KEY = "6fe2235f85a756314753774cee5fb164"
 FL_PGYER_API_KEY = "43ce06e684f029fe3ec64a436c2a5c15"
