--- a/VerifyProject/fastlane/App.env
+++ b/VerifyProject/fastlane/App.env
@@ -1,6 +1,6 @@
 # 项目相关
-FL_PROJECT_PATH = "./VerifyProject/VerifyProject.xcodeproj"
-FL_WORKSPACE_PATH = "./VerifyProject/VerifyProject.xcworkspace"
+FL_PROJECT_PATH = "./VerifyProject.xcodeproj"
+FL_WORKSPACE_PATH = "./VerifyProject.xcworkspace"
 FL_SCHEME = "VerifyProject"
 
 # 输出目录
