--- a/VerifyProject/Podfile
+++ b/VerifyProject/Podfile
@@ -1,5 +1,7 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#Uncomment the next line to define a global platform for your project
+source 'https://github.com/CocoaPods/Specs'
+source 'https://github.com/ApterKingRepo/Specs.git'
+platform :ios, '9.0'
 
 target 'VerifyProject' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
