--- a/VerifyProject/fastlane/Jenkinsfile
+++ b/VerifyProject/fastlane/Jenkinsfile
@@ -5,10 +5,6 @@ pipeline {
     BASH_PROFILE = '~/.bashrc'
   }
 
-  parameters {
-      string(name: 'module', defaultValue: 'A,B,C,D,E', description: '组件')
-  }
-
   stages {
     stage('拉取项目') {
       steps {
@@ -19,7 +15,7 @@ pipeline {
     stage('生成配置文件') {
       steps {
         dir('./VerifyProject/fastlane') {
-          sh 'bundle exec fastlane ios config_generate param:${params.module}'
+          sh "bundle exec fastlane ios config_generate param:'${params.module}'"
         }
       }
     }
